<resources>

    <string name="app_name">Singularity Chess</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Singularity Chess</string>
    <string name="vs_human">VS Human</string>
    <string name="vs_computer">VS Computer</string>
    <string name="resume">Resume Game</string>
    <string name="multi_player">Online Mode (Coming Soon!)</string>
    <string name="pref_disp_square_labels">Display Square Labels</string>
    <string name="pref_disp_shadow_labels">Render Shadows</string>
    <string name="pref_mute_labels">Mute</string>
    <string name="pref_show_help">Instructions</string>
    <string name="pref_disp_square_labels_summ">Specify whether or not you wish the rank and file to be displayed on each square</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="quit">Quit</string>
    <string name="really_quit">Really quit?</string>
    <string name="surrender">Surrender</string>
    <string name="really_surrender">Are you sure you want to surrender?</string>
    <string name="offline_label">Offline Game</string>
    <string name="online_label">Online Game</string>
    <string name="crash_toast">Oops! I got an error, but a report has been sent to my developer to help fix the issue!</string>
    <string name="start_new_game">Start new game</string>
    <string name="really_start_new_game">Start new game?</string>
    <string name="no_resume">No, resume old game</string>
    <string name="instructions">        This is just like normal chess, except that the board is warped around a central "singularity".\n
        Straight movements become curved around the singularity, and diagonal movements become distorted.\n 
        \n
        The only pieces impervious to the effects of the singularity are the pawns. Pawns follow straight forward trajectories right across the screen.\n
        \n
        No empassant is allowed.\n 
        No castling is allowed (yet).</string>
    <string name="stalemate_title">Stalemate!</string>
    <string name="checkmate_title">Checkmate!</string>
    <string name="win_title">You win!</string>
    <string name="lose_title">You lose!</string>
    <string name="stalemate_message">This is stale meat. Should have put it in the fridge \;\) Let\'s play again!</string>
    <string name="lose_to_AI_message">You lost to the computer! Let\'s play again!</string>
    <string name="win_message">Congratulations, you win!</string>
    <string name="lose_message">Unfortunately, you lost!</string>
    <string name="black_win_message">Black player wins!</string>
    <string name="white_win_message">White player wins!</string>

</resources>