<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/pref_disp_square_labels"
        android:checkable="true"
        android:orderInCategory="97"
        android:showAsAction="never"
        android:title="@string/pref_disp_square_labels"/>
    
     <item
        android:id="@+id/pref_mute"
        android:checkable="true"
        android:orderInCategory="98"
        android:showAsAction="never"
        android:checked="false"
        android:title="@string/pref_mute_labels"/>
     
       <item
        android:id="@+id/show_help"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/pref_show_help"/>

</menu>